--- a/.github/workflows/process_lmia.yml
+++ b/.github/workflows/process_lmia.yml
@@ -28,13 +28,10 @@ jobs:
           # Use GITHUB_TOKEN for authentication
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies (jq, gnumeric, telegraf)
+      - name: Install dependencies (jq, gnumeric)
         run: |
           sudo apt-get update
           sudo apt-get install -y jq gnumeric
-          # Install Telegraf
-          wget -q https://dl.influxdata.com/telegraf/releases/telegraf_1.31.1-1_amd64.deb
-          sudo dpkg -i telegraf_1.31.1-1_amd64.deb
 
       - name: Show debug info
         if: ${{ github.event.inputs.debug_mode == 'true' }}
@@ -70,14 +67,6 @@ jobs:
           file_count=$(echo "${{ steps.process.outputs.new_file_names }}" | wc -w)
           git commit -m "Bot: Add ${file_count} new LMIA report(s)" -m "${{ steps.process.outputs.new_file_names }}"
           git push origin ${{ github.ref_name }}
-
-      - name: Run Telegraf to ingest data
-        if: steps.process.outputs.new_files_found == 'true'
-        run: |
-          echo "New files were found. Running Telegraf..."
-          telegraf --once --config="path/to/your/config.conf"
-        # Note: Ensure the path to your telegraf config is correct.
-        # It should be checked into your repository.
 
       - name: Manual run summary
         if: github.event_name == 'workflow_dispatch'
