fix: add git pull before push to prevent remote conflict errors

--- a/.github/workflows/process_lmia.yml
+++ b/.github/workflows/process_lmia.yml
@@ -62,6 +62,8 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          # Pull latest changes to avoid conflicts
+          git pull origin ${{ github.ref_name }} --rebase
           git add .
           # The commit message will include a count of new files
           file_count=$(echo "${{ steps.process.outputs.new_file_names }}" | wc -w)
