refactor: separate data collection from geocoding processing
BREAKING CHANGE: Collection workflow now operates in two phases

Collection Phase (process_feeds.sh):
- Removes postal code geocoding from main collection script
- Saves raw 3-column CSV files to outputs/csv/unprocessed/
- No longer blocked by API rate limits during collection
- Fast, uninterrupted data gathering

Processing Phase (update_cache.sh):
- Separate script handles postal code geocoding
- Works with unprocessed CSV files
- One row per postal code (not per employer)
- Configurable API rate limiting

Directory Structure:
- outputs/csv/unprocessed/ - Raw collected CSV files
- outputs/csv/processed/ - Ready for future geocoded files
- outputs/cache/ - Postal code cache

Workflow Updates:
- Collection no longer requires geocoding
- Optional cache update step with configurable timing
- Manual control over when to run expensive API operations

Benefits:
- Unblocked data collection
- Separated concerns (collect vs process)
- Faster daily collection runs
- On-demand geocoding with rate control

[workflow-separation]

--- a/.github/workflows/process_lmia.yml
+++ b/.github/workflows/process_lmia.yml
@@ -20,6 +20,16 @@ on:
         options:
           - en
           - fr
+      update_cache:
+        description: 'Run cache update after collection'
+        required: false
+        default: false
+        type: boolean
+      sleep_timer:
+        description: 'Sleep timer between geocoding API calls (seconds)'
+        required: false
+        default: '1'
+        type: string
 
 # Add explicit permissions for the workflow
 permissions:
@@ -54,14 +64,19 @@ jobs:
           echo "Commit: ${{ github.sha }}"
           echo "Actor: ${{ github.actor }}"
 
-      - name: Fetch and process new reports
-        id: process
+      - name: Fetch raw LMIA reports (no geocoding)
+        id: collect
         run: |
           # Create the directory for the script if it doesn't exist
           mkdir -p scripts
-          # This assumes your script is in the scripts/ directory
-          # Pass language parameter to the script
+          # Collect raw CSV files without postal code processing
           LANGUAGE="${{ github.event.inputs.language || 'en' }}" bash ./scripts/process_feeds.sh
+          
+      - name: Update location cache (optional)
+        if: ${{ github.event.inputs.update_cache == 'true' }}
+        run: |
+          # Run cache update with configurable sleep timer
+          SLEEP_TIMER="${{ github.event.inputs.sleep_timer || '1' }}" bash ./scripts/update_cache.sh
       - name: Show process outputs
         if: ${{ github.event.inputs.debug_mode == 'true' }}
         run: |
