feat: add secure Google Geocoding API integration
- Add .gitignore entries to protect API keys and environment files
- Create env.example template with API key configuration
- Add load_env.sh script for secure environment loading
- Update all geocoding scripts to load environment variables
- Create test_google_geocoding.sh for API integration testing
- Google API key will be used as fallback after free services fail

The system maintains security by:
- Never committing actual API keys to version control
- Using environment variables for configuration
- Providing clear documentation via env.example

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 .agentic-tools-mcp
 .DS_Store
+
+# Environment files containing API keys and secrets
+.env
+.env.local
+.env.*.local
+*.env
+
+# API key files
+api_keys.txt
+google_api_key.txt
