fix: add csvkit dependency to collect-data workflow
- Add csvkit package installation to resolve 'in2csv not available' error
- Use system package (apt) installation for consistency with other workflows
- Enables proper Excel to CSV conversion instead of copying .xlsx files as-is
- Resolves failing data collection that was falling back to raw Excel files

This fixes the collect action that was showing:
'⚠️ in2csv not available, copying Excel file as-is'

--- a/.github/workflows/collect-data.yml
+++ b/.github/workflows/collect-data.yml
@@ -63,7 +63,8 @@ jobs:
         run: |
           # Install required tools
           sudo apt-get update
-          sudo apt-get install -y jq curl
+          sudo apt-get install -y jq curl csvkit
+          # csvkit provides in2csv for Excel to CSV conversion
 
       - name: Debug information
         if: ${{ inputs.debug_mode == 'true' }}
